--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,12 +144,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O trecho abaixo separa o Dataset em dois conjuntos: um de treinamento e um de teste, cada um deles com metade do tamanho do conjunto de dados inicial. Além disso ele cria um conjunto de resultados para cada novo conjunto, onde cada elemento desses conjuntos recebe o valor 1, se for \"first_class\" (definido por padrão como Iris-setosa) ou 0 se for \"second_class\" (definido por padrão como Iris-versicolor). Nota-se que "
+    "O trecho abaixo separa o Dataset em dois conjuntos: um de treinamento e um de teste, cada um deles com metade do tamanho do conjunto de dados inicial. Além disso ele cria um conjunto de resultados para cada novo conjunto, onde cada elemento desses conjuntos recebe o valor 1, se for \"first_class\" (definido por padrão como Iris-setosa) ou 0 se for \"second_class\" (definido por padrão como Iris-versicolor). Nota-se que os elementos de cada conjunto são escolhidos aleatoriamente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -207,10 +207,10 @@
      "output_type": "stream",
      "text": [
       "W_0: 0.1\n",
-      "W_1: 0.10999999999999993\n",
-      "W_2: 0.36\n",
-      "W_3: -0.5200000000000001\n",
-      "W_4: -0.21999999999999997\n"
+      "W_1: 0.07\n",
+      "W_2: 0.5100000000000002\n",
+      "W_3: -0.8199999999999998\n",
+      "W_4: -0.37\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -268,9 +268,9 @@
       " [19, 'Iris-setosa', 'Iris-setosa'],\n",
       " [20, 'Iris-setosa', 'Iris-setosa'],\n",
       " [21, 'Iris-setosa', 'Iris-setosa'],\n",
-      " [22, 'Iris-setosa', 'Iris-setosa'],\n",
-      " [23, 'Iris-setosa', 'Iris-setosa'],\n",
-      " [24, 'Iris-setosa', 'Iris-setosa'],\n",
+      " [22, 'Iris-versicolor', 'Iris-versicolor'],\n",
+      " [23, 'Iris-versicolor', 'Iris-versicolor'],\n",
+      " [24, 'Iris-versicolor', 'Iris-versicolor'],\n",
       " [25, 'Iris-versicolor', 'Iris-versicolor'],\n",
       " [26, 'Iris-versicolor', 'Iris-versicolor'],\n",
       " [27, 'Iris-versicolor', 'Iris-versicolor'],\n",
